--- a/index.html
+++ b/index.html
@@ -32,4 +32,26 @@
           
             </div>
          </div>    
+         <div class=" explicacao">
+            <div class="imagens">
+                <img src="img/Layer.png">
+                <h2>Sobre Nós</h2>
+            </div>
+            <div class="texto">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                In lacinia nec enim nec placerat. Donec ac magna nisl.
+                Aliquam ornare nec leo sit amet malesuada. Morbi vestibulum neque tortor, et bibendum nisi interdum et. 
+                Sed id tincidunt mauris, a scelerisque turpis. Vivamus pulvinar arcu quam, eget efficitur leo aliquam at. 
+                Vivamus fringilla, augue vel convallis molestie, dui dolor facilisis ante, at sollicitudin nunc elit ac lacus.</p>
+
+               <p></p> Nullam feugiat venenatis metus a vestibulum. 
+                Donec rhoncus libero nibh, molestie porttitor massa maximus quis.
+                Morbi elementum sapien id nisl consectetur ornare. Donec ut ultrices turpis.
+                Sed dignissim semper facilisis. Sed ornare hendrerit suscipit.
+                Praesent luctus semper mi, vitae vehicula mauris lobortis id. Sed vulputate nec mauris eu commodo. 
+                Donec fermentum non nunc at semper. Suspendisse hendrerit ex eu nisi euismod, ac ultrices quam rhoncus. 
+                Sed euismod rutrum semper. Fusce condimentum, dui et euismod feugiat, arcu orci interdum arcu, quis accumsan enim lacus sed dolor. 
+                Morbi ut arcu libero.</p> 
+            </div>
+         </div>
     </body>
