--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 In lacinia nec enim nec placerat. Donec ac magna nisl.
                 Aliquam ornare nec leo sit amet malesuada. Morbi vestibulum neque tortor, et bibendum nisi interdum et. 
                 Sed id tincidunt mauris, a scelerisque turpis. Vivamus pulvinar arcu quam, eget efficitur leo aliquam at. 
-                Vivamus fringilla, augue vel convallis molestie, dui dolor facilisis ante, at sollicitudin nunc elit ac lacus.</p>
-
-               <p></p> Nullam feugiat venenatis metus a vestibulum. 
+                Vivamus fringilla, augue vel convallis molestie, dui dolor facilisis ante, at sollicitudin nunc elit ac lacus.
+            <br><br>
+                Nullam feugiat venenatis metus a vestibulum. 
                 Donec rhoncus libero nibh, molestie porttitor massa maximus quis.
                 Morbi elementum sapien id nisl consectetur ornare. Donec ut ultrices turpis.
                 Sed dignissim semper facilisis. Sed ornare hendrerit suscipit.
