--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                 Morbi elementum sapien id nisl consectetur ornare. Donec ut ultrices turpis.
                 Sed dignissim semper facilisis. Sed ornare hendrerit suscipit.
                 Praesent luctus semper mi, vitae vehicula mauris lobortis id. Sed vulputate nec mauris eu commodo. 
-                Donec fermentum non nunc at semper. Suspendisse hendrerit ex eu nisi euismod, ac ultrices quam rhoncus. 
-                Sed euismod rutrum semper. Fusce condimentum, dui et euismod feugiat, arcu orci interdum arcu, quis accumsan enim lacus sed dolor. 
-                Morbi ut arcu libero.</p> 
+                Donec fermentum non nunc at semper.</p> 
             </div>
          </div>
         </section>
